# Nian-Kankotu-Project

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: settings.run.yaml  settings.runtime.yaml  settings.yaml
docs/: AGENTS.md  architecture.md
scripts/: verify_arch_sync.py
src/nian_kantoku/: AGENTS.md  __init__.py
src/nian_kantoku/application/: __init__.py  config.py  exceptions.py  json_utils.py  ports.py  prompt_templates.py  run_models.py  storyboard_parser.py  use_cases.py
src/nian_kantoku/application/services/: __init__.py  design_asset_service.py  shot_execution_service.py  storyboard_service.py
src/nian_kantoku/domain/: __init__.py  models.py
src/nian_kantoku/infrastructure/: __init__.py  ark_clients.py  ffmpeg_merger.py  local_store.py  runtime_checks.py
src/nian_kantoku/interface/: __init__.py  cli.py  presentation.py  progress_dashboard.py  run_logging.py
tests/: AGENTS.md  test_ark_clients.py  test_cli.py  test_config.py  test_prompt_templates.py  test_storyboard_parser.py  test_use_case.py  test_verify_arch_sync.py
